Exclude specs from Metrics/BlockLength cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,6 +73,6 @@ Style/SingleArgumentDig:
 Style/StringConcatenation:
   Enabled: true
 
-Metrics:
+Metrics/BlockLength:
   Exclude:
-    - 'spec/lib/visit_spec.rb'
+    - 'spec/**/*.rb'
